--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,4 @@
 
+eureka.instance.hostname=localhost
+eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka/
+eureka.client.instance.preferIpAddress = true
