--- a/application-prod.properties
+++ b/application-prod.properties
@@ -1,1 +1,5 @@
 
+spring.application.name=config-prod
+eureka.instance.hostname=localhost
+eureka.client.serviceUrl.defaultZone  = http://localhost:8761/eureka/
+eureka.client.instance.preferIpAddress = true
